stockp-price component set up

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <script nomodule src="/build/stenciljsadavnce.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <dr-stock-price></dr-stock-price>
   </body>
 </html>
