componentDIdLoad lifecycle hook

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <script nomodule src="/build/stenciljsadavnce.js"></script>
   </head>
   <body>
-    <dr-stock-price></dr-stock-price>
+    <dr-stock-price stock-symbol="AAPL"></dr-stock-price>
   </body>
 </html>
