mapping a list of names and symbols

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <dr-stock-price stock-symbol="AAPL"></dr-stock-price>
+    <dr-stock-finder></dr-stock-finder>
   </body>
 </html>
