--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,12 @@
   <body>
     <dr-stock-price stock-symbol="AAPL"></dr-stock-price>
     <dr-stock-finder></dr-stock-finder>
+
+    <script>
+      const stockFinderEl = document.querySelector('dr-stock-finder');
+      stockFinderEl.addEventListener('ucSymbolSelected', event => {
+        console.log(event);
+      });
+    </script>
   </body>
 </html>
